[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/games/solo/Solo.gd" type="Script" id=1]
[ext_resource path="res://scenes/miscs/camera_rts/CameraRTS.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/miscs/team_manager/TeamManager.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/ui/squad_member/SquadMember.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/ui/squad/Squad.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/ui/attack/Attack.tscn" type="PackedScene" id=10]

[node name="Solo" type="Node"]
script = ExtResource( 1 )

[node name="Level" type="Spatial" parent="."]

[node name="CameraRTS" parent="Level" instance=ExtResource( 2 )]

[node name="PlayerTeamManager" parent="." instance=ExtResource( 7 )]
team = "TeamPlayer"
control = "Player"

[node name="EnnemyTeamManager" parent="." instance=ExtResource( 7 )]
team = "Ennemy"
control = "AI"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Turn" type="Control" parent="CanvasLayer"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -143.0
margin_top = -63.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Turn"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -10.0
margin_bottom = -10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextTurnButton" type="Button" parent="CanvasLayer/Turn/MarginContainer"]
margin_right = 133.0
margin_bottom = 53.0
text = "Next turn"

[node name="Combat" type="VBoxContainer" parent="CanvasLayer"]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -136.5
margin_top = -150.0
margin_right = 136.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="CanvasLayer/Combat"]
margin_right = 273.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Combat/ScrollContainer"]
margin_right = 273.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="Attack" parent="CanvasLayer/Combat" instance=ExtResource( 10 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 44.0
margin_right = 273.0
margin_bottom = 150.0
size_flags_vertical = 3

[node name="Actions" type="Control" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -153.0
margin_top = -27.0
margin_right = 154.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Actions"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Actions/MarginContainer"]
margin_right = 307.0
margin_bottom = 20.0
custom_constants/separation = 20
alignment = 1

[node name="MoveButton" type="Button" parent="CanvasLayer/Actions/MarginContainer/HBoxContainer"]
margin_left = 94.0
margin_right = 141.0
margin_bottom = 20.0
text = "Move"

[node name="AttackButton" type="Button" parent="CanvasLayer/Actions/MarginContainer/HBoxContainer"]
margin_left = 161.0
margin_right = 213.0
margin_bottom = 20.0
text = "Attack"

[node name="AmbushButton" type="Button" parent="CanvasLayer/Actions/MarginContainer/HBoxContainer"]
visible = false
margin_left = 195.0
margin_right = 251.0
margin_bottom = 45.0
text = "Albush"

[node name="Squad" parent="CanvasLayer" instance=ExtResource( 9 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 441.0
margin_bottom = 92.0
squad_path = NodePath("../../../Solo/PlayerTeamManager")

[node name="SquadMember" parent="CanvasLayer" instance=ExtResource( 8 )]
visible = false
[connection signal="selected" from="PlayerTeamManager" to="." method="_on_PlayerTeamManager_selected"]
[connection signal="selected" from="EnnemyTeamManager" to="." method="_on_EnnemyTeamManager_selected"]
[connection signal="turn_finished" from="EnnemyTeamManager" to="." method="_on_turn_finished"]
[connection signal="pressed" from="CanvasLayer/Turn/MarginContainer/NextTurnButton" to="." method="_on_NextTurnButton_pressed"]
[connection signal="pressed" from="CanvasLayer/Actions/MarginContainer/HBoxContainer/MoveButton" to="." method="_on_MoveButton_pressed"]
[connection signal="pressed" from="CanvasLayer/Actions/MarginContainer/HBoxContainer/AttackButton" to="." method="_on_AttackButton_pressed"]
[connection signal="selected" from="CanvasLayer/Squad" to="." method="_on_Squad_selected"]
